objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Opened__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &apos;Open&apos;) ,  NOW()  -  Date_Opened__c ,  Date_Closed__c  -  Date_Opened__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days Opened</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Position_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Position Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco, CA</fullName>
                </value>
                <value>
                    <fullName>New York, NY</fullName>
                </value>
                <value>
                    <fullName>Atlanta, GA</fullName>
                </value>
                <value>
                    <fullName>London, United Kingdom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_Grade__c</fullName>
        <label>Pay Grade</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Department__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C-100</fullName>
                </value>
                <value>
                    <fullName>C-200</fullName>
                </value>
                <value>
                    <fullName>C-300</fullName>
                </value>
                <value>
                    <fullName>C-400</fullName>
                </value>
                <value>
                    <fullName>IT-100</fullName>
                </value>
                <value>
                    <fullName>IT-200</fullName>
                </value>
                <value>
                    <fullName>IT-300</fullName>
                </value>
                <value>
                    <fullName>IT-400</fullName>
                </value>
                <value>
                    <fullName>ACT-100</fullName>
                </value>
                <value>
                    <fullName>ACT-200</fullName>
                </value>
                <value>
                    <fullName>ACT-300</fullName>
                </value>
                <value>
                    <fullName>ACT-400</fullName>
                </value>
                <value>
                    <fullName>ENG-100</fullName>
                </value>
                <value>
                    <fullName>ENG-200</fullName>
                </value>
                <value>
                    <fullName>ENG-300</fullName>
                </value>
                <value>
                    <fullName>ENG-400</fullName>
                </value>
                <value>
                    <fullName>S-100</fullName>
                </value>
                <value>
                    <fullName>S-200</fullName>
                </value>
                <value>
                    <fullName>S-300</fullName>
                </value>
                <value>
                    <fullName>S-400</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Filled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Temp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Close_Date_Rule</fullName>
        <active>false</active>
        <description>Close Date must be specified when Status is set to &apos;Closed - Filled&apos; or &apos;Closed - Not Approved.&apos;</description>
        <errorConditionFormula>ISBLANK(  Date_Closed__c ) &amp;&amp; ISPICKVAL( Status__c , &quot;Closed&quot;) &amp;&amp; ( ISPICKVAL(  Sub_Status__c , &quot;Filled&quot;)|| ISPICKVAL(  Sub_Status__c , &quot;Not Approved&quot;))|| Date_Closed__c &lt;  NOW()</errorConditionFormula>
        <errorDisplayField>Date_Closed__c</errorDisplayField>
        <errorMessage>Closed date must be specified when status is set to &apos;Closed&apos;.</errorMessage>
    </validationRules>
</CustomObject>